target_sources(fiction_tests PRIVATE
    mockturtle.cpp
)

add_subdirectory(graph)
add_subdirectory(iter)
add_subdirectory(network_transformation)
add_subdirectory(optimization)
add_subdirectory(path_finding)
add_subdirectory(physical_design)
add_subdirectory(properties)
add_subdirectory(simulation)
add_subdirectory(verification)
